# BJJ-manual

./: .gitignore  pyproject.toml
bjj_manual/: backup.json  db.sqlite3  manage.py
bjj_manual/bjj_manual/: asgi.py  settings.py  urls.py  wsgi.py
bjj_manual/positions/: admin.py  models.py  views.py
bjj_manual/positions/migrations/: 0001_initial.py  0002_move.py  0003_alter_position_points.py  0004_alter_move_position.py  0005_move_description_move_is_attacking_move_is_defending_and_more.py
bjj_manual/positions/templates/: base.html  home.html  move_steps.html  position_options.html
