[tool.poetry]
name = "bjj-manual"
version = "0.1.0"
description = ""
authors = ["peter.bhabra <peter.bhabra@cmrsurgical.com>"]
readme = "README.md"
packages = [{include = "bjj_manual"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
